Apply white-space:pre-wrap to <pre><code> blocks (fixes #75)

--- a/_less/screen.less
+++ b/_less/screen.less
@@ -69,6 +69,7 @@ pre{
 pre code{
 	font-size:12px;
 	padding:0;
+	white-space:pre-wrap;
 }
 code{
 	padding:2px 4px;
